# ArmoniK.Admin.CLI

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: app.py  armonik.py
src/armonik_cli/: admin.py
